# sheled

./: Cargo.toml  README.md
.github/workflows/: node.frontend.auth.yml  node.js.yml  node.ui.yml  rust.clippy.yml  rust.yml
entity/: Cargo.toml  README.md
entity/derive-entity/: Cargo.toml
entity/derive-entity/src/: lib.rs
entity/src/: lib.rs
frontend-auth/: package-lock.json  package.json
frontend-auth/public/: index.html  manifest.json
frontend-auth/src/: App.js  App.test.js  Auth.js  Login.js  Signup.js
sql/: 01-schema.sql
src/: main.rs
src/auth/: api.rs  jwt.rs  md5.rs  mod.http  mod.rs
src/chess/: hub.rs  mainline.rs  mod.rs  uci.rs
src/model/: README.md  db.rs  games.rs  keys.rs  mod.rs  users.rs
src/ws/: mod.rs  rx.rs  tx.rs
ui/components/history/: history.js
ui/components/ws/: ws.js
