[package]
name = "sheled"
version = "0.1.1"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["fs", "sync", "time", "macros", "rt-multi-thread"] }
tokio-stream = "0.1.1"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
pretty_env_logger = "0.4"
warp = "0.3.3"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres" ] }
tracing-subscriber = "0.3.16"
thiserror = "1.0.34"
jsonwebtoken = "8.2.0"
serde = "1.0.152"
md5 = "0.7.0"
rand = "0.8.5"
hex = "0.4.3"
sea-orm = { version = "0.11.2", features = ["sqlx-postgres", "runtime-tokio", "macros", "sea-orm-internal"], default-features = false }
